# SensorMoniteringHub

./: .gitignore  README.md
.github/workflows/: build.yml
app/cmake/: CMakeLists.txt
app/cmake/src_cmake/: CMakeLists.txt
app/code/inc/ClientRequestService/: NotificationSender.hpp  RequestParser.hpp
app/code/inc/DataPool/: DataPool.hpp
app/code/inc/EventDispatcher/: EventDispatcher.hpp
app/code/inc/JsonParser/: JsonParser.hpp
app/code/include/ClientRequestService/: ClientRequestService.hpp  IClientRequestHandler.hpp  NotificationSender.hpp  RequestData.hpp  RequestParser.hpp  ResponseEncoder.hpp
app/code/include/ControlCommandService/: CommandOrderInformation.hpp  CommandParser.hpp  CommandResponseEncoder.hpp  ControlCommandService.hpp
app/code/include/DataPool/: DataPool.hpp
app/code/include/EventDispatcher/: EventDispatcher.hpp
app/code/include/Events/: IEvents.hpp
app/code/include/JsonParser/: ConfigParser.hpp  JsonParser.hpp
app/code/include/Logger/: Logger.hpp
app/code/include/NetworkInterfaceManager/: TCPReceiver.hpp  UDPReceiver.hpp
app/config/: SMH_Config.json
app/tools/: build.sh  deploy.sh  run.sh
simulators/tcp_control_client_simulator/: TcpControlClientSim.cpp
simulators/tcp_control_client_simulator/config/: SMH_Config.json
simulators/tcp_request_client_simulator/: TcpRequestClientSim.cpp
simulators/udp_sensor_simulator/: udp_sensor_simulation.cpp
simulators/udp_sensor_simulator/SensorDataSource/: invalid_data_1.json  valid_data_1.json  valid_data_2.json  valid_data_3.json  valid_data_4.json
(+27 files in other folders)
